--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,10 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto);
+@import "./grid/index";
 
 html,
 body {
   font-family: "Roboto";
+  height: 100%;
+  overflow: hidden;
+  margin: 0;
 }
